# SmartClock

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  alarmitemwidget.cpp  alarmitemwidget.h  alarmitemwidget.ui  alarmmanager.cpp  alarmsettingsdialog.ui  alarmwindow.cpp  alarmwindow.h  alarmwindow.ui  analogstopwatchdial.cpp  analogstopwatchdial.h  clocksettingsdialog.cpp  clocksettingsdialog.ui  clockwindow.cpp  clockwindow.h  clockwindow.ui  glossary.md  historytimerwindow.cpp  historytimerwindow.h  historytimerwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  settingstimerdialog.cpp  settingstimerdialog.h  settingstimerdialog.ui  stopwatchwindow.cpp  stopwatchwindow.h  stopwatchwindow.ui  thememanager.cpp  thememanager.h  timereditdialog.cpp  timereditdialog.h  timereditdialog.ui  timermanager.cpp  (+5 more)
.github/workflows/: ci.yml  pages.yml
alarm/: alarmfactory.h  alarmitemwidget.cpp  alarmitemwidget.h  alarmitemwidget.ui  alarmmanager.cpp  alarmmanager.h  alarmrepeatmode.h  alarmsettingsdialog.cpp  alarmsettingsdialog.h  alarmsettingsdialog.ui  alarmwindow.cpp  alarmwindow.h  alarmwindow.ui  ialarmaction.h  ialarmstorage.h  jsonalarmstorage.cpp  jsonalarmstorage.h  soundalarmaction.cpp  soundalarmaction.h
clock/: clockmodel.cpp  clockmodel.h  clocksettingsdialog.cpp  clocksettingsdialog.h  clocksettingsdialog.ui  clockwindow.cpp  clockwindow.h  clockwindow.ui  iclockstorage.h  jsonclockstorage.cpp  jsonclockstorage.h
controllers/: alarmcontroller.cpp  alarmcontroller.h  clockcontroller.cpp  clockcontroller.h  stopwatchcontroller.cpp  stopwatchcontroller.h  timercontroller.cpp  timercontroller.h
stopwatch/: analogstopwatchdial.cpp  analogstopwatchdial.h  istopwatchstorage.h  jsonstopwatchstorage.cpp  jsonstopwatchstorage.h  stopwatchmodel.cpp  stopwatchmodel.h  stopwatchwindow.cpp  stopwatchwindow.h
style/: darkTheme.qss  lightTheme.qss
tests/: CMakeLists.txt  test_alarm.cpp  test_clock.cpp  test_controllers.cpp  test_logic_alarm.cpp  test_logic_clock.cpp  test_logic_stopwatch.cpp  test_logic_timer.cpp  test_main.cpp  test_main_ui.cpp  test_mainwindow.cpp  test_stopwatch.cpp  test_theme.cpp  test_timer.cpp  test_timerwindow.cpp  test_windowedit.cpp
timer/: historytimerwindow.cpp  historytimerwindow.h  itimerstorage.h  jsontimerstorage.cpp  jsontimerstorage.h  settingstimerdialog.cpp  settingstimerdialog.h  settingstimerdialog.ui  timereditdialog.cpp  timereditdialog.h  timereditdialog.ui  timermanager.cpp  timermanager.h  timerwindow.cpp  timerwindow.h  timerwindow.ui
uml/activity/: activity.html
uml/class/: class.html  classAfterRef.html
uml/communication/: communication.html  communicationAfterRef.html
uml/component/: component.html  componentAfterRef.html
uml/deployment/: deployment.html
uml/interaction_overview/: interaction_overview.html
uml/object/: object.html
uml/package/: package.html
uml/sequence/: sequence.html
uml/state/: state.html
uml/timing/: timing.html
uml/use_case/: use_case.html
windowEdit/: framelessWindow.cpp  framelessWindow.h  snapPreviewWindow.cpp  snapPreviewWindow.h
